[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -80.0
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 50

[node name="TitleGame" type="Label" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
text = "Blue Injury: The Escape"
align = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 500.0
margin_bottom = 84.0
focus_neighbour_top = NodePath("../ExitButton")
text = "Start"

[node name="OptionsMenu" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 500.0
margin_bottom = 154.0
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 500.0
margin_bottom = 224.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsMenu" to="." method="_on_OptionsMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
